--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.2.0",
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.2.0",
+    "firebase": "^12.1.0",
     "framer-motion": "^12.23.7",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
